<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/family_list_logo"
        android:contentDescription="@string/application_logo" />
    <!--TextView: Label Login-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />
    <!--EditView: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/login_email_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button: Login User-->
    <Button
        android:id="@+id/login_loginBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_TIL"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_login_btn"
        android:drawablePadding="5dp"
        android:text="@string/login_btn" />

    <!--TextView: show dialog to recover password-->
    <TextView
        android:id="@+id/login_recover_password_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_loginBtn"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/login_forgot_passwordTv"
        android:textAlignment="center" />

    <!--EditView: Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_TIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_TIL"
        android:layout_centerInParent="true"
        app:textInputLayoutFocusedRectEnabled="true">

        <EditText
            android:id="@+id/login_password_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--TextView: click go to RegisterActivity-->
    <TextView
        android:id="@+id/login_not_have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/not_have_account_register_Tv_prompt"
        android:textAlignment="center"
        android:textColor="@color/black" />

</RelativeLayout>