<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/family_list_logo"
        android:contentDescription="@string/application_logo" />
    <!--TextView: Label Register-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <!--EditView: Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/register_emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--EditView: Input Password-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_emailTIL"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:textInputLayoutFocusedRectEnabled="true">

        <EditText
            android:id="@+id/register_passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button: Register User-->
    <Button
        android:id="@+id/register_registerBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_passwordTIL"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_register_btn"

        android:drawablePadding="5dp"
        android:text="@string/registerBtn" />

    <!--TextView: click go to LoginActivity-->
    <TextView
        android:id="@+id/register_have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_registerBtn"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/already_have_account_login_Tv_prompt"
        android:textAlignment="center"
        android:textColor="@color/black" />

</RelativeLayout>